--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,45 @@
 version: '2'
 services:
 
-    # btc is an image of bitcoin node which used as base image for btcd and
-    # btccli. The environment variables default values determined on stage of
+    # The environment variables default values determined on stage of
     # container start within starting script.
-    btc:
+    btcd:
       image: btcd
       build:
         context: btcd/
       volumes:
-            - shared:/rpc
-            - bitcoin:/data
+        - shared:/rpc
+        - bitcoin:/data
+      container_name: btcd
       environment:
         - RPCUSER
         - RPCPASS
         - NETWORK
+        - DEBUG
+        - MINING_ADDRESS
+      entrypoint: ["./start-btcd.sh"]
 
-    btcd:
-        extends: btc
-        container_name: btcd
-        environment:
-          - DEBUG
-          - MINING_ADDRESS
-          - NETWORK
-        entrypoint: ["./start-btcd.sh"]
+    btcctl: 
+      image: btcd
+      build:
+        context: btcd/
+      container_name: btcctl
+      environment:
+        - RPCUSER
+        - RPCPASS
+        - NETWORK
+      volumes:
+        - shared:/rpc
+        - bitcoin:/data
+      links:
+        - "btcd:rpcserver"
+      entrypoint: ["./start-btcctl.sh"]
 
-    btcctl:
-        extends: btc
-        container_name: btcctl
-        links:
-            - "btcd:rpcserver"
-        entrypoint: ["./start-btcctl.sh"]
-
-    lnd:
+    lnd-btc:
         image: lnd
         build:
           context: lnd/
+        container_name: lnd-btc
         environment:
           - RPCUSER
           - RPCPASS
@@ -43,14 +47,10 @@ services:
           - CHAIN
           - DEBUG
         volumes:
-            - shared:/rpc
-        entrypoint: ["./start-lnd.sh"]
-
-    lnd_btc:
-      extends: lnd
-      container_name: lnd_btc
-      links:
+          - shared:/rpc
+        links:
           - "btcd:blockchain"
+        entrypoint: ["./start-lnd.sh"]
 
 volumes:
   # shared volume is need to store the btcd rpc certificates and use it within
