--- a/service.yaml
+++ b/service.yaml
@@ -7,6 +7,12 @@ spec:
   - name: peer
     port: 9735
     targetPort: 9735
+  - name: rpc
+    port: 10009
+    targetPort: 10009
+  - name: prometheus
+    port: 8989
+    targetPort: 8989
   selector:
     app: lnd-btcd
   type: LoadBalancer
